--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -704,12 +704,12 @@ a {
   .cid-tDHdSeQQUI .image-wrap img {
     display: block;
     margin: auto;
-    width: 20%;
+    width: 30%;
   }
 }
 .cid-tDHdSeQQUI .mbr-text,
 .cid-tDHdSeQQUI .mbr-section-btn {
-  color: #6592e6;
+  color: #bed3f9;
   text-align: left;
 }
 .cid-tDHdSeQQUI .mbr-section-title {
@@ -758,7 +758,7 @@ a {
 }
 .cid-tIT5W2oMnI .card-title,
 .cid-tIT5W2oMnI .card-img {
-  color: #8caff0;
+  color: #bed3f9;
 }
 .cid-tDHdUHnn5n {
   padding-top: 15px;
@@ -767,5 +767,5 @@ a {
   overflow: hidden;
 }
 .cid-tDHdUHnn5n .media-container-row .mbr-text {
-  color: #353535;
+  color: #bed3f9;
 }
