--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -709,7 +709,7 @@ a {
 }
 .cid-tDHdSeQQUI .mbr-text,
 .cid-tDHdSeQQUI .mbr-section-btn {
-  color: #bbbbbb;
+  color: #353535;
   text-align: left;
 }
 .cid-tDHdSeQQUI .mbr-section-title {
@@ -718,9 +718,9 @@ a {
 .cid-tDHdUHnn5n {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #000000;
+  background-color: #ffffff;
   overflow: hidden;
 }
 .cid-tDHdUHnn5n .media-container-row .mbr-text {
-  color: #bbbbbb;
+  color: #131313;
 }
